--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = huzzah
 framework = arduino
+lib_deps = 
+	paulstoffregen/Time@^1.6.1
+	arduino-libraries/NTPClient@^3.2.1
+	adafruit/Adafruit NeoPixel@^1.10.5
